<package format="2">
  <name>genyamlcpp</name>
  <version>0.0.1</version>
  <description>Ros c++ yaml-cpp en/decoder generator</description>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
  <license>BSD</license>

  <author>Leroy Ruegemer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>genmsg</depend>

  <export>
    <message_generator>yamlcpp</message_generator>
  </export>
  
</package>